alignment issue fix

--- a/src/features/Container/Protocols/protocols.scss
+++ b/src/features/Container/Protocols/protocols.scss
@@ -8,7 +8,7 @@
 }
 .protocols {
   > div.p-rl-20:first-child {
-    padding-left: 16px;
+    padding-left: 35px;
   }
   .protocol-breadcrumb {
     margin-bottom: 0;
@@ -19,7 +19,7 @@
   // max-width: 1200px;
 
   .p-rl-20 {
-    padding-left: 20px;
+    padding-left: 45px;
     padding-right: 20px;
     display: flex;
   }
@@ -33,7 +33,7 @@
   }
   .protocol-source-column {
     .panel-heading {
-      margin-left: 10px;
+      margin-left: 15px;
     }
   }
   .br-cr-protocol {
